# CLionProjects

./: .clang-format  .clang-tidy  .clangd  .gitignore  CPP_Storage_classes_Memory_model_Variable_allocations.ods  CPP_workflow_tools.txt  README.md
An_Implementation_Helper_For_The_Curiously_Recurring_Template_Pattern-Adding_several_functionalities_with_CRTP-diamond_inheritance/: CMakeLists.txt  main.cpp
An_Implementation_Helper_For_The_Curiously_Recurring_Template_Pattern_Adding_several_functionalities_with_CRTP-each_functionality_in_separate_CRTP_class/: CMakeLists.txt  main.cpp
CPP_Polymorphic_cloning_and_the_CRTP_Virtual_clone_function_through_CRTP_in_multiple_inheritance_A_horrible_workaround/: CMakeLists.txt  main.cpp
CPP_Polymorphic_cloning_and_the_CRTP_Virtual_clone_function_through_CRTP_in_multiple_inheritance_Constructor_forwarding_problem/: CMakeLists.txt  main.cpp
CPP_Polymorphic_cloning_and_the_CRTP_Virtual_clone_function_through_CRTP_in_multiple_inheritance_The_CPP11_solution/: CMakeLists.txt  main.cpp  main_preprocessed.cpp
Constructor_delegation_The_Solution_Multiple_Constructors_Refactoring/: CMakeLists.txt  main.cpp
Design_Patterns_CPP/Creational/Singleton/Dependency_Injection/: CMakeLists.txt  main.cpp
Design_Patterns_CPP/SOLID_Design_Principles/Open_Closed_Principle/: CMakeLists.txt  main.cpp
Design_patterns-Adapter-implemented_as_Object_Adapter/: CMakeLists.txt  main.cpp
FunctionPointers/: CMakeLists.txt  Child.h  Parent.h  main.cpp
FunctionPointers/AbstractClassesPureVirtualFunctions/: Animal.h  Dog.h  Labrador.h
FunctionPointers/Functors/: MatchTest.h  Test.h
Instance_ownership_Other_object_owns_the_instance_Instance_can_live_shorter_than_owner_Alternative_with_weak_ptr_member_variable/: CMakeLists.txt  main.cpp
Instance_ownership_Other_object_owns_the_instance_Instance_can_live_shorter_than_owner_Weak_ptr_in_vector/: CMakeLists.txt  main.cpp
Object_adapter_as_interface_with_reference_wrapper_and_polymorphism_CPP_14/: CMakeLists.txt  RoundCompatible.h  RoundHole.cpp  RoundPeg.h  SquareToRoundPegAdapter.cpp  SquareToRoundPegAdapter.h  main.cpp  object_adapter-sequence_diagram.puml
OperatorOverloading/: AssignmnentOperatorAndCopyConstructor.cpp  AssignmnentOperatorAndCopyConstructor.h  CMakeLists.txt  ComplexNumber.cpp  ComplexNumber.h  ComplexNumberExercise.cpp  ComplexNumberExercise.h  LeftBitShiftOperator.cpp  LeftBitShiftOperator.h  Test.cpp  Test.h  main.cpp
PIMPL_Idiom_Raw_pointer_before_and_after/: CMakeLists.txt  Engine.h  Fridge.h  main.cpp
PIMPL_Idiom_Raw_pointer_before_and_after/PIMPL_Fridge/: AnotherEngine.h  AnotherFridge.cpp  AnotherFridge.h
PIMPL_Idiom_Unique_pointer_Even_more_expressive_before_and_after/: CMakeLists.txt  main.cpp  pimpl_h.h  pimpl_impl.h  widget.cpp  widget.h  widget_old.cpp  widget_old.h
PIMPL_Idiom_Unique_pointer_before_and_after/: CMakeLists.txt  OldEngine.h  OldFridge.h  main.cpp
PIMPL_Idiom_Unique_pointer_before_and_after/UniquePtrPIMPL_Idiom/: Engine.h  Fridge.cpp  Fridge.h
PolymorphicClone_CovariantUniquePtr_MultipleInheritance_DeepHierarchy_DiamondProblem_CRTP_PartialTemplateSpecialization/: CMakeLists.txt  main.cpp
Shapes_Templated_factory_CRTP/: CMakeLists.txt  main.cpp
Shapes_Templated_factory_CRTP/shapes/: Shape.h
Shapes_Templated_factory_CRTP/shapes/circle/: Circle.cpp  Circle.h  CircleDimension.cpp  CircleDimension.h
Shapes_Templated_factory_CRTP/shapes/rectangle/: Rectangle.cpp  Rectangle.h  RectangleDimension.cpp  RectangleDimension.h
Shapes_Templated_factory_CRTP/shapes/square/: Square.cpp  Square.h  SquareDimension.cpp  SquareDimension.h
Shapes_Templated_factory_Smart_pointers_CRTP/: CMakeLists.txt  main.cpp
Shapes_Templated_factory_Smart_pointers_CRTP/shapes/: Shape.h
Shapes_Templated_factory_Smart_pointers_CRTP/shapes/circle/: Circle.cpp  Circle.h  CircleDimension.cpp  CircleDimension.h
Shapes_Templated_factory_Smart_pointers_CRTP/shapes/rectangle/: Rectangle.cpp  Rectangle.h  RectangleDimension.cpp  RectangleDimension.h
Shapes_Templated_factory_Smart_pointers_CRTP/shapes/square/: Square.cpp  Square.h  SquareDimension.cpp  SquareDimension.h
UniquePtrCustomDeletersMoreExpressive/: CMakeLists.txt  Computer.h  MoreExpressiveUniquePtrDeleter.h  NamespacedComputer.h  ProblematicUniquePtrDeleterSigns.h  main.cpp
animation-single_character_circular/: AnimationInNCurses.cpp  AnimationInNCurses.h  CMakeLists.txt  README.md  main.cpp
conditional_inclusion_with_preprocessor_directives/: CMakeLists.txt  README.md  main.cpp
handle_pipe_input/: CMakeLists.txt  README.md  TerminalHelper.cpp  TerminalHelper.h  main.cpp
job_interview_preparation-c_language/: CMakeLists.txt  algorithm_exercise.c  algorithm_exercise.h  delimiter.c  delimiter.h  main.c  one_dimensional_array.c  one_dimensional_array.h  realloc_example.c  realloc_example.h  shallow_deep_copy.c  shallow_deep_copy.h  string_examples.c  string_examples.h  string_factory.c  string_factory.h  struct_examples.c  struct_examples.h  two_dimensional_array.c  two_dimensional_array.h
state_design_pattern/: CMakeLists.txt  Client.cpp  README.adoc  if-else_state_machine-activity_diagram-document.puml  state_design_pattern-document-class_diagram.puml  state_design_pattern-document-sequence_diagram.puml  state_design_pattern-sequence_diagram-document.puml  state_diagram-document.puml
state_design_pattern/documentAsIfElseStateMachine/: DocumentAsIfElseStateMachine.cpp  DocumentAsIfElseStateMachine.h
state_design_pattern/documentAsStateDesignPattern/: Document.cpp  Document.h  Draft.cpp  Draft.h  Moderation.cpp  Moderation.h  Published.cpp  Published.h  State.h  User.cpp  User.h
state_design_pattern/documentAsStateDesignPatternProduction/: Document.cpp  Document.h  Draft.cpp  Draft.h  InitialState.cpp  Moderation.cpp  Moderation.h  Published.cpp  Published.h  State.cpp  State.h  StateType.h  States.cpp  States.h  Transition.cpp  Transition.h  TransitionType.h  User.cpp  User.h  state_design_pattern-class_diagram.puml  state_design_pattern-sequence_diagram.puml  state_design_pattern-state_diagram.puml
(+1713 files in other folders)
