cmake_minimum_required(VERSION 3.15)
project(An_Implementation_Helper_For_The_Curiously_Recurring_Template_Pattern_Adding_several_functionalities_with_CRTP_each_functionality_in_separate_CRTP_class)

set(CMAKE_CXX_STANDARD 14)

add_executable(An_Implementation_Helper_For_The_Curiously_Recurring_Template_Pattern_Adding_several_functionalities_with_CRTP_each_functionality_in_separate_CRTP_class main.cpp)