cmake_minimum_required(VERSION 3.15)
project(Constructor_delegation_The_Solution_Multiple_Constructors_Refactoring)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -pedantic")

add_executable(Constructor_delegation_The_Solution_Multiple_Constructors_Refactoring main.cpp)