cmake_minimum_required(VERSION 3.15)
project(PolymorphicClone_CovariantUniquePtr_MultipleInheritance_DeepHierarchy_DiamondProblem_CRTP_PartialTemplateSpecialization)

set(CMAKE_CXX_STANDARD 14)

add_executable(PolymorphicClone_CovariantUniquePtr_MultipleInheritance_DeepHierarchy_DiamondProblem_CRTP_PartialTemplateSpecialization main.cpp)