cmake_minimum_required(VERSION 3.14)
project(Open_Closed_Principle)

set(CMAKE_CXX_STANDARD 17)

add_executable(Open_Closed_Principle main.cpp ocp_violating_product_filter/OCP_Violating_Product_Filter.cpp ocp_violating_product_filter/OCP_Violating_Product_Filter.h shared/Product.h ocp_conforming_product_filter_with_specification_pattern/OCP_Conforming_Product_Filter_With_Specification_Pattern.cpp ocp_conforming_product_filter_with_specification_pattern/OCP_Conforming_Product_Filter_With_Specification_Pattern.h ocp_conforming_product_filter_with_specification_pattern/Specification.h ocp_conforming_product_filter_with_specification_pattern/Filter.h ocp_conforming_product_filter_with_specification_pattern/Color_Specification.cpp ocp_conforming_product_filter_with_specification_pattern/Color_Specification.h shared/Color.h shared/Size.h ocp_conforming_product_filter_with_specification_pattern/Size_Specification.cpp ocp_conforming_product_filter_with_specification_pattern/Size_Specification.h ocp_conforming_product_filter_with_specification_pattern/TwoSpecificationsCombinator.h)